@startuml Nicosio

' Configuracion de la plantilla: skin tradicional, fuente Excel, sin sombra.
skin rose
skinparam classFontName Calibri
skinparam shadowing false

' @title       Patrón de diseño Mediador
' @description El patrón de diseño Mediador es un patrón de comportamiento que 
'              permite reducir las dependencias entre objetos al encapsular la
'              forma en que estos interactúan entre sí.
' @author      Gerardo Tordoya
' @date        2022-09-21

title Patrón de diseño Mediador

interface IColega
{
    + Informa()
    + Actualiza()
}

class Mediador
class Colega

IColega <|.. Colega
Colega "0..*"--o Mediador
Colega -- Mediador

caption youtu.be/s4j92Rj7TJk

@enduml